# userfaultfd-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank-issue.md
.github/workflows/: rust.yml
examples/: manpage.rs
linux-version/: Cargo.toml  build.rs  wrapper.h
linux-version/src/: lib.rs
src/: builder.rs  error.rs  event.rs  lib.rs  raw.rs
tests/: manpage_example.rs
userfaultfd-sys/: Cargo.toml  build.rs  wrapper.h
userfaultfd-sys/src/: consts.c  lib.rs  linux4_11.rs  linux4_14.rs  linux5_7.rs
