[package]
name = "userfaultfd"
version = "0.3.2"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Linux userfaultfd functionality"
repository = "https://github.com/fastly/userfaultfd-rs"
readme = "README.md"

[dependencies]
bitflags = "1.0"
cfg-if = "^1.0.0"
libc = "0.2.65"
nix = "0.17"
thiserror = "1.0.4"
linux-version = { "path" = "linux-version" }
userfaultfd-sys = { path = "userfaultfd-sys", version = "^0.3.0" }

[features]
default = []
linux4_14 = ["userfaultfd-sys/linux4_14"]
linux5_7 = ["userfaultfd-sys/linux5_7"]
