[package]
name = "userfaultfd"
version = "0.9.0"
authors = ["The Wasmtime Project Developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Linux userfaultfd functionality"
repository = "https://github.com/bytecodealliance/userfaultfd-rs"
readme = "README.md"

[dependencies]
bitflags = "2.4.0"
cfg-if = "^1.0.0"
libc = "0.2.65"
nix = { version = "0.31", features = ["ioctl"] }
thiserror = "1.0.4"
userfaultfd-sys = { path = "userfaultfd-sys", version = "^0.6.0" }

[dev-dependencies]
nix = { version = "0.31", features = ["poll", "mman", "feature"] }

[features]
default = []
linux4_14 = ["userfaultfd-sys/linux4_14", "nix/process"]
linux5_7 = ["userfaultfd-sys/linux5_7"]
linux5_13 = ["userfaultfd-sys/linux5_13"]
