[package]
name = "userfaultfd-sys"
version = "0.4.2"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Low-level bindings for userfaultfd functionality on Linux."
repository = "https://github.com/fastly/userfaultfd-rs"

build = "build.rs"

[dependencies]
cfg-if = "^1.0.0"

[build-dependencies]
bindgen = { version = "^0.60.1", default-features = false, features = ["runtime"]  }
cc = "1.0"

[features]
default = []
linux4_14 = []
linux5_7 = []
