[package]
name = "userfaultfd-sys"
version = "0.5.0"
authors = ["The Wasmtime Project Developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Low-level bindings for userfaultfd functionality on Linux."
repository = "https://github.com/bytecodealliance/userfaultfd-rs"

build = "build.rs"

[dependencies]
cfg-if = "^1.0.0"

[build-dependencies]
bindgen = { version = "^0.68.1", default-features = false }
cc = "1.0"

[features]
default = ["runtime"]

linux4_14 = []
linux5_7 = []

runtime = ["bindgen/runtime"]
static = ["bindgen/static"]
